syntax = "proto3";

package metrics_server;

option go_package = "github.com/kmx0/devops/internal/metrics_server/proto";
import "google/protobuf/empty.proto";


enum Type {
    UNKNOWN = 0;
    COUNTER = 1;
    GAUGE   = 2;
  }
  
message Metric {
    string  id        = 1;
    Type    type      = 2;
    string  hash      = 3;
    oneof   value {
      int64   counter = 4;
      double  gauge   = 5;
    }
}


message UpdateMetricBatchRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricRequest {
  Metric metric = 1;
}


message GetMetricRequest {
  Metric metric = 1;
}

service MetricsService {
  rpc UpdateMetricBatch(UpdateMetricBatchRequest) returns (google.protobuf.Empty) {};
  rpc UpdateMetric(UpdateMetricRequest) returns (google.protobuf.Empty) {};
  rpc GetMetric(GetMetricRequest) returns (Metric) {};
}
